--- a/Frontend/src/components/CSS/navbar.css
+++ b/Frontend/src/components/CSS/navbar.css
@@ -3,3 +3,44 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.37), 0 6px 20px 0 rgba(10, 9, 10, 0.295);
     /* opacity: 0.4; */
 }
+
+.profile_icon{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 3vh;
+    margin-left: 2vh;
+    margin-top: 0.4vh;
+    
+    
+}
+.grow{
+    
+    transition: all ease 0.2s;
+}
+    
+.grow:hover{
+        /* transform: translateY(-0.2px); */
+        box-shadow: 0px 1px 15px 2px rgba(187, 179, 209, 0.7);
+}
+
+
+.dis{
+        height: 8vh;
+        /* width: 8vh; */
+}
+
+.login_btn{
+    margin-right: 3vh;
+    margin-left: 2vh;
+    margin-top: 0.4vh;
+    
+}
+
+.disNone{
+        
+    display: none;
+}
+.dispBlock{
+    display:block;
+}
